--- a/package.json
+++ b/package.json
@@ -12,18 +12,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.8",
+    "@types/helmet": "0.0.48",
+    "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.7",
-    "morgan": "^1.10.0"
+    "helmet": "^4.1.1",
+    "install": "^0.13.0",
+    "mongoose": "^5.10.5",
+    "morgan": "^1.10.0",
+    "npm": "^6.14.8"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
+    "@types/express": "^4.17.8",
     "babel-cli": "^6.26.0",
     "dotenv": "^8.2.0",
-    "nodemon": "2.0.4"
+    "nodemon": "2.0.4",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
